# autobackup

./: .gitignore  README.md  defaults.toml  logging.toml  pyproject.toml
build_env/: build.bat
docs/: 000_sequence_main_1.pu  001_sequence_main_2.pu  002_sequence_bkup.pu  modules_ja_jp.md
src/: autobackup.bat  main.py  showlog.bat
src/autobackup/: __main__.py  appinit.py  bkup.py  cnf.py  dictutil.py  dstrepo.py  fsutil.py  main.py  metarepo.py  repoinit.py  scanner.py  srcrepo.py
src/cnf/: defaults.toml  logging.toml
src/showlog/: __main__.py  main.py
tests/: README.md  conftest.py  testutil.py
tests/data/cnf/: defaults.toml  logging.toml  my_settings.toml
tests/integ/: test_main.py
tests/unit/: test_appinit.py  test_bkup.py  test_cnf.py  test_dictutil.py  test_dstrepo.py  test_fsutil.py  test_metarepo.py  test_scanner.py  test_srcrepo.py
