[tool.poetry]
name = "autobackup"
version = "0.1.0"
description = ""
authors = ["TAKAMURA Akihisa <tkmr.akhs@gmail.com>"]
readme = "README.md"
packages = [{ include = "autobackup", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyinstaller = "^5.8.0"

[tool.poetry.group.dev.dependencies]
python = ">=3.10,<3.12"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-raises = "^0.11"
pyinstaller = "^5.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
